--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,8 @@
 /public/storage
 /storage/*.key
 /storage/pail
-!storage/app
-!storage/app/public
+!/storage/app
+!/storage/app/public
 /vendor
 Homestead.json
 Homestead.yaml
